Made the listeners configurable through the properties file.  Modified a few of classes to eliminate warning that show up with the use of Integer and FLoat constructors passing oin string values.  Switched to using the .valueOf() static methods.